# mrp2_desktop-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
launch/: view_amcl.launch  view_navigation.launch
mrp2_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrp2_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrp2_viz/launch/: view_gmapping.launch  view_robot.launch
mrp2_viz/rviz/: amcl.rviz  gmapping.rviz  model.rviz  navigation.rviz
rpm/: ros-indigo-mrp2-desktop.spec  ros-indigo-mrp2-viz.spec  template.spec
rviz/: robot.rviz
