<?xml version="1.0"?>
<package>
  <name>mrp2_viz</name>
  <version>0.2.1</version>
  <description>RViz configurations and launch files for visualization.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/Robots/MRP2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rviz</run_depend>

</package>